# oaknut

./: .gitignore  CMakeLists.txt  README.md  test.cpp
.github/workflows/: build-and-test.yml
include/oaknut/: code_block.hpp  oaknut.hpp
include/oaknut/feature_detection/: feature_detection.hpp  feature_detection_apple.hpp  feature_detection_freebsd.hpp  feature_detection_generic.hpp  feature_detection_hwcaps.hpp  feature_detection_linux.hpp  feature_detection_w32.hpp  id_registers.hpp
include/oaknut/impl/: arm64_encode_helpers.inc.hpp  arm64_mnemonics.inc  arm64_mnemonics.inc.hpp  enum.hpp  fpsimd_mnemonics.inc.hpp  imm.hpp  list.hpp  mnemonics_fpsimd_v8.0.inc.hpp  mnemonics_fpsimd_v8.1.inc.hpp  mnemonics_fpsimd_v8.2.inc.hpp  mnemonics_fpsimd_v8.3.inc.hpp  mnemonics_generic_v8.0.inc.hpp  mnemonics_generic_v8.1.inc.hpp  mnemonics_generic_v8.2.inc.hpp  mnemonics_generic_v8.3.inc.hpp  multi_typed_name.hpp  oaknut_exception.inc.hpp  offset.hpp  overloaded.hpp  reg.hpp  string_literal.hpp
tests/: _feature_detect.cpp  basic.cpp  fpsimd.cpp  general.cpp  vector_code_gen.cpp
